# FDA

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Android/: CMakeLists.txt  Extra.cpp  Extra.h
Android/dexdump/: DexDump.cpp  DexDump.h
Android/libdex/: CmdUtils.cpp  DexCatch.cpp  DexCatch.h  DexClass.cpp  DexClass.h  DexDataMap.cpp  DexDataMap.h  DexDebugInfo.cpp  DexFile.cpp  DexFile.h  DexOpcodes.cpp  DexOpcodes.h  DexProto.cpp  DexProto.h  DexSwapVerify.cpp  DexUtf.cpp  DexUtf.h  InstrUtils.cpp  InstrUtils.h  Leb128.cpp  Leb128.h  SysUtil.cpp  ZipArchive.cpp  ZipArchive.h
Android/vm/: Common.h  Dalvik.h  DvmDex.cpp  DvmDex.h  Inlines.h  JniInternal.h  jni.h
Android/vm/oo/: Class.cpp  Class.h  Object.cpp  Object.h  Resolve.cpp  Resolve.h
Decompile/: CMakeLists.txt  main.cpp
Decompile/baksmali/: CMakeLists.txt  bakField.cpp  bakField.h  bakclass.cpp  bakclass.h  bakmethod.cpp  bakmethod.h  baksmali.cpp  baksmali.h  main.cpp
Decompile/base/: accessFlags.cpp  accessFlags.h  stringPool.cpp  stringPool.h
Windows/: .gitignore  CMakeLists.txt  MainForm.ui.qml  main.cpp  main.qml
Windows/Main/: Main.cpp  Main.h  Main.ui  Main.ui.autosave  ui_Main.h
Windows/Splash/: Splash.cpp  Splash.h  Splash.ui  ui_Splash.h
